syntax = "proto2";

package biz.test;
option java_package = "com.autonavi.snowman.test";
option java_outer_classname = "AddressBookProtos";

message Person {
    required string name = 1;
    required int32 id = 2;
    optional string email = 3 [default = "testEmail"];
    repeated PhoneNumber phones = 4;
    optional Cloth cloth = 5;
    repeated int32 scores = 6;
    repeated Profession professions = 7;

    enum PhoneType {
        MOBILE = 0;
        HOME = 1;
        WORK = 2;
    }

    message PhoneNumber {
        required string number = 1;
        optional PhoneType type = 2 [default = HOME];
    }
    message Cloth {
        optional Brand brand = 1;
        optional int32 price = 2;

        message Brand {
            optional string brand_name = 1;
            optional BrandType brand_type = 2;
        }
        enum BrandType {
            SPORT = 1;
            CASUAL = 2;
            LUXURY = 3;
        }
    }
    enum Profession {
        PROGRAMMER = 1;
        PM = 2;
    }

    extensions 10 to max;
}

extend Person {
    optional int32 feet = 10;
}

message AddressBook {
    repeated Person people = 1;
}